# xhec-mlops-project-student

./: .gitignore  .pre-commit-config.yaml  Dockerfile.app  README.md  environment.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yaml
data/: abalone_cleaned.csv
notebooks/: GB.pkl  best_model.pkl  eda.ipynb  modelling.ipynb
src/modelling/: LR.pkl  Ridge.pkl  deployment.py  main-deployment.yaml  main.py  predicting.py  preprocessing.py  training.py  utils.py
src/web_service/: main.py  utils.py
src/web_service/lib/: inference.py  models.py
