[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xhec-mlops-project-student"
authors = [
  { name = "Benazra Ugo", email = "ugo.benazra@hec.edu" },
  { name = "Bordes Thomas", email = "thomas.bordes@hec.edu" },
  { name = "Mesguiche Samuel", email = "samuel.mesguiche@hec.edu" },
  { name = "Pezzi Julien", email = "julien.pezzi@hec.edu" },
  { name = "Poitevin Aubry", email = "aubry.poitevin@hec.edu" }
]

description = "This repository contains the solution for the X-HEC MLOps Project for group 7 on the industrialization of Abalone age prediction model."
version = "0.0.1"
readme = "README.md"
requires-python = ">3.10"

[project.urls]
"Homepage" = "https://github.com/ThomasBrdes/xhec-mlops-project-student.git"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 88
